<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/entry"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="378dp"
                android:layout_height="232dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/logo2" />

            <!-- App name -->

            <TextView
                android:id="@+id/app_name"
                style="@style/TextColor"
                android:layout_width="320dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="BusBuddy"
                android:textSize="70dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="430dp"
                android:padding="20dp">


                <EditText
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:id="@+id/login_email"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/lavender_border"
                    android:padding="8dp"
                    android:hint="Email"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/grey"/>

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:id="@+id/login_password"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:padding="8dp"
                    android:hint="Password"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/grey"/>


                <Button
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:id="@+id/login_button"
                    android:textSize="18sp"
                    app:cornerRadius = "30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_password"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:padding="8dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/lavender"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupRedirectText"
                    android:text="@string/not_yet_registered_signup"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="14dp"
                    android:textSize="18sp"
                    android:textColor="@color/lavender"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>